--- a/src/Styles/Home/hero.scss
+++ b/src/Styles/Home/hero.scss
@@ -2,11 +2,12 @@
 
 .hero {
     // min-height: calc(100vh - 80px);
+    // height: 100vh;
     height: calc(100vh - 80px);
     max-width: 1700px;
     display: grid;
     grid-template-columns: 300px 100px 1fr;
-    grid-template-rows: 50px minmax(600px, 1fr) 100px;
+    grid-template-rows: 50px minmax(500px, 1fr) 50px;
     padding-left: 75px;
     // padding-top: 80px;
     margin: auto auto;
