--- a/src/Styles/Home/history.scss
+++ b/src/Styles/Home/history.scss
@@ -211,13 +211,17 @@
 
 @media screen and (max-width: 768px) {
     .history {
-        grid-template-columns: 75px 1fr 75px;
+        grid-template-columns: 50px 1fr 50px;
         grid-template-rows: 50px 125px 1fr 50px;
 
-        .history-img {
+        // .history-img {
+        //     grid-column: 1/4;
+        //     background-color: rgba(0, 0, 0, .85);
+        // }
+        .video-wrapper {
             grid-column: 1/4;
-            background-color: rgba(0, 0, 0, .85);
         }
+
 
 
         .history-title {
@@ -265,7 +269,7 @@
         grid-template-columns: 50px 1fr 50px;
 
         .history-title {
-            font-size: 3rem;
+            font-size: 3.15rem;
         }
 
         .history-container {
