--- a/src/Styles/Home/contact.scss
+++ b/src/Styles/Home/contact.scss
@@ -139,6 +139,7 @@
 
         input,
         textarea {
+            font-family: $text-font;
             width: 100%;
             height: 50px;
             font-size: 1.6rem;
