--- a/src/Styles/components/Home/hero.scss
+++ b/src/Styles/components/Home/hero.scss
@@ -1,5 +1,3 @@
-@import '../_global';
-
 .hero {
     // min-height: calc(100vh - 80px);
     // height: 100vh;
@@ -17,7 +15,7 @@
     .hero-img {
         grid-row: 2;
         grid-column: 2/4;
-        background: url("../../assets/images/bild3.jpg") no-repeat;
+        background: url("../../../assets/images/bild3.jpg") no-repeat;
         background-position: center;
         background-size: cover;
         background-blend-mode: multiply;
